--- a/chrome/requirements.txt
+++ b/chrome/requirements.txt
@@ -1,9 +1,10 @@
+pip==23.2.1
 blinker==1.6.2
 certifi==2023.7.22
 charset-normalizer==3.3.0
 click==8.1.7
 cmake==3.27.5
-filelock==3.12.2
+filelock==3.12.4
 Flask==3.0.0
 idna==3.4
 itsdangerous==2.1.2
