--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ click==8.1.7
 cmake==3.27.5
 filelock==3.12.4
 Flask==3.0.0
+gunicorn==21.2.0
 idna==3.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
@@ -28,6 +29,7 @@ nvidia-cusparse-cu11==11.7.4.91
 nvidia-nccl-cu11==2.14.3
 nvidia-nvtx-cu11==11.7.91
 openai-whisper==20230918
+packaging==23.1
 regex==2023.8.8
 requests==2.31.0
 sympy==1.12
@@ -38,4 +40,3 @@ triton==2.0.0
 typing_extensions==4.8.0
 urllib3==2.0.5
 Werkzeug==3.0.0
-gunicorn
