--- a/requirements.txt
+++ b/requirements.txt
@@ -31,6 +31,7 @@ nvidia-nccl-cu11==2.14.3
 nvidia-nvtx-cu11==11.7.91
 openai-whisper==20230918
 packaging==23.1
+pika==1.3.2
 regex==2023.8.8
 requests==2.31.0
 sympy==1.12
