--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ certifi==2023.7.22
 charset-normalizer==3.3.0
 click==8.1.7
 cmake==3.27.5
+decouple==0.0.7
 filelock==3.12.4
 Flask==3.0.0
 Flask-Cors==4.0.0
@@ -32,6 +33,8 @@ nvidia-nvtx-cu11==11.7.91
 openai-whisper==20230918
 packaging==23.1
 pika==1.3.2
+python-decouple==3.8
+python-dotenv==1.0.0
 regex==2023.8.8
 requests==2.31.0
 sympy==1.12
